[package]
name = "hueue-proxy"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
byteorder = "1"
bytes = "1"
dns-lookup = "1"
log = "0.4"
env_logger = "0.9"
mimalloc = "0.1"